fixed bug 11892 - [dogfood] When Name or Address of a recipient includes 8-bit characters address is incorrectly formed; not quoting name part of an email address; calling GetPath() instead of GetFileName() for all recipients; r=rhp, mscott